# RayTracer

./: CMakeLists.txt  Doxyfile
source/parallelraytracer/: main.cpp
source/tracer/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Tracer.cpp  Tracer.h
